--- a/Dell/Precision 5530/oem.conf
+++ b/Dell/Precision 5530/oem.conf
@@ -2,6 +2,6 @@
 Manufacturer=Dell
 Product=Precision
 Version=5530
-#Logo=/etc/oem/precision-5530.png
-Logo=/etc/oem/dell.png
+#Logo=/etc/oem/dell.png
+Logo=/etc/oem/precision-5530.png
 URL=https://www.dell.com/support/
