--- a/System76/Meerkat (meer1)/oem.conf
+++ b/System76/Meerkat (meer1)/oem.conf
@@ -2,5 +2,5 @@
 Manufacturer=System76 Inc.
 Product=Meerkat
 Version=meer1
-Logo=/etc/oem/logo.png
+Logo=/etc/oem/meer1.png
 URL=https://support.system76.com
