--- a/MSI/PS63 Moderm 8RD/oem.conf
+++ b/MSI/PS63 Moderm 8RD/oem.conf
@@ -2,5 +2,6 @@
 Manufacturer=MSI
 Product=Moderm
 Version=PS62
+#Logo=/etc/oem/msi.png
 Logo=/etc/oem/msi-ps63-moderm-8rd.png
 URL=https://www.msi.com/support/
