--- a/ASUS/X556UR/oem.conf
+++ b/ASUS/X556UR/oem.conf
@@ -1,7 +1,7 @@
 [OEM]
 Manufacturer=ASUS
 Product=Vivobook
-Version=X556UR 1.0
+Version=X556UR
 #Logo=/etc/oem/asus.png
-Logo=/etc/oem/X556UR 1.0.png
+Logo=/etc/oem/X556UR.png
 URL=https://www.asus.com/support/
