--- a/MSI/PS63 Moderm 8RD/oem.conf
+++ b/MSI/PS63 Moderm 8RD/oem.conf
@@ -1,7 +1,7 @@
 [OEM]
 Manufacturer=MSI
-Product=Moderm
+Product=Modern
 Version=PS63
 #Logo=/etc/oem/msi.png
-Logo=/etc/oem/msi-ps63-moderm-8rd.png
+Logo=/etc/oem/msi-ps63-modern-8rd.png
 URL=https://www.msi.com/support/
