changed logo from generic oem to laptop model

--- a/Acer/Aspire 5/A515-51G-5072/oem.conf
+++ b/Acer/Aspire 5/A515-51G-5072/oem.conf
@@ -2,5 +2,6 @@
 Manufacturer=Acer
 Product=Aspire 5
 Version=A515-51G-5072
-Logo=/etc/oem/acer.png
+#Logo=/etc/oem/acer.png
+Logo=/etc/oem/a515-51g-5072.png
 URL=https://www.acer.com
