--- a/Lenovo/Legion Y530/oem.conf
+++ b/Lenovo/Legion Y530/oem.conf
@@ -3,4 +3,4 @@ Manufacturer=Lenovo
 Product=Legion
 Version=Y530
 Logo=/etc/oem/legion-y530.png
-URL=https://www.lenovo.com/support
+URL=https://pcsupport.lenovo.com/
