--- a/Lenovo/Thinkpad Yoga 370/oem.conf
+++ b/Lenovo/Thinkpad Yoga 370/oem.conf
@@ -3,4 +3,4 @@ Manufacturer=Lenovo
 Product=Thinkpad Yoga
 Version=370
 Logo=/etc/oem/lenovo-thinkpad-yoga-370.png
-URL=https://www.lenovo.com/au/en/
+URL=https://pcsupport.lenovo.com/
