--- a/Lenovo/Thinkpad T495s/oem.conf
+++ b/Lenovo/Thinkpad T495s/oem.conf
@@ -3,4 +3,4 @@ Manufacturer=Lenovo
 Product=Thinkpad
 Version=T495s
 Logo=/etc/oem/lenovo-thinkpad-t495s.png
-URL=https://www.lenovo.com/
+URL=https://pcsupport.lenovo.com/
