--- a/Lenovo/Thinkpad Yoga L13/oem.conf
+++ b/Lenovo/Thinkpad Yoga L13/oem.conf
@@ -3,4 +3,4 @@ Manufacturer=Lenovo
 Product=Thinkpad Yoga
 Version=L13
 Logo=/etc/oem/lenovo-thinkpad-l13-yoga.png
-URL=https://www.lenovo.com/au/en/
+URL=https://pcsupport.lenovo.com/
