Clean up MSI and RPi

--- a/Raspberry Pi/4B/oem.conf
+++ b/Raspberry Pi/4B/oem.conf
@@ -1,6 +1,6 @@
 [OEM]
 Manufacturer=Raspberry Pi Trading LTD
 Product=Raspberry Pi
-Version=4B 1 GB
+Version=4B
 Logo=/etc/oem/rpi.png
 URL=https://raspberrypi.org/
