--- a/ASUS/Zenbook UX330U/oem.conf
+++ b/ASUS/Zenbook UX330U/oem.conf
@@ -2,5 +2,5 @@
 Manufacturer=ASUS
 Product=Zenbook
 Version=UX330U
-Logo=/etc/oem/UX330U.png
+Logo=/etc/oem/asus.png
 URL=https://www.asus.com/support/
