--- a/Schenker/VIA 15 Pro/oem.conf
+++ b/Schenker/VIA 15 Pro/oem.conf
@@ -2,6 +2,5 @@
 Manufacturer=Schenker Technologies GmbH
 Product=VIA 15 Pro
 Version=SVI15PM20
-#Logo=/etc/oem/logo.png
-Logo=/etc/oem/SCHENKER-VIA-15.png
+Logo=/etc/oem/VIA-15.png
 URL=https://www.schenker-tech.de/
