Clean up thumbnails

--- a/Lenovo/Legion Y530/oem.conf
+++ b/Lenovo/Legion Y530/oem.conf
@@ -2,5 +2,5 @@
 Manufacturer=Lenovo
 Product=Legion
 Version=Y530
-Logo=/etc/oem/legion-y530.png
+Logo=/etc/oem/y530.png
 URL=https://pcsupport.lenovo.com/
