--- a/Lenovo/Thinkpad T495s/oem.conf
+++ b/Lenovo/Thinkpad T495s/oem.conf
@@ -2,5 +2,5 @@
 Manufacturer=Lenovo
 Product=Thinkpad
 Version=T495s
-Logo=/etc/oem/lenovo-thinkpad-t495s.png
+Logo=/etc/oem/t495s.png
 URL=https://pcsupport.lenovo.com/
