--- a/Lenovo/Thinkpad Yoga 370/oem.conf
+++ b/Lenovo/Thinkpad Yoga 370/oem.conf
@@ -2,5 +2,5 @@
 Manufacturer=Lenovo
 Product=Thinkpad Yoga
 Version=370
-Logo=/etc/oem/lenovo-thinkpad-yoga-370.png
+Logo=/etc/oem/370.png
 URL=https://pcsupport.lenovo.com/
