--- a/Lenovo/Thinkpad Yoga L13/oem.conf
+++ b/Lenovo/Thinkpad Yoga L13/oem.conf
@@ -2,5 +2,5 @@
 Manufacturer=Lenovo
 Product=Thinkpad Yoga
 Version=L13
-Logo=/etc/oem/lenovo-thinkpad-l13-yoga.png
+Logo=/etc/oem/l13.png
 URL=https://pcsupport.lenovo.com/
