--- a/Lenovo/Yoga 720 15/oem.conf
+++ b/Lenovo/Yoga 720 15/oem.conf
@@ -2,5 +2,5 @@
 Manufacturer=Lenovo
 Product=Yoga
 Version=720 (15 Inch)
-Logo=/etc/oem/lenovo-yoga-720-15.png
+Logo=/etc/oem/720-15.png
 URL=https://pcsupport.lenovo.com/
