Fix capitalization of ThinkPad directories

--- a/Lenovo/ThinkPad T495s/oem.conf
+++ b/Lenovo/ThinkPad T495s/oem.conf
@@ -1,6 +1,6 @@
 [OEM]
 Manufacturer=Lenovo
-Product=Thinkpad Yoga
-Version=370
-Logo=/etc/oem/370.png
+Product=ThinkPad
+Version=T495s
+Logo=/etc/oem/t495s.png
 URL=https://pcsupport.lenovo.com/
