--- a/Lenovo/ThinkPad Yoga 370/oem.conf
+++ b/Lenovo/ThinkPad Yoga 370/oem.conf
@@ -1,6 +1,6 @@
 [OEM]
 Manufacturer=Lenovo
-Product=Thinkpad
-Version=T495s
-Logo=/etc/oem/t495s.png
+Product=ThinkPad Yoga
+Version=370
+Logo=/etc/oem/370.png
 URL=https://pcsupport.lenovo.com/
