--- a/Lenovo/ThinkPad Yoga L13/oem.conf
+++ b/Lenovo/ThinkPad Yoga L13/oem.conf
@@ -1,6 +1,6 @@
 [OEM]
 Manufacturer=Lenovo
-Product=Thinkpad Yoga
+Product=ThinkPad Yoga
 Version=L13
 Logo=/etc/oem/l13.png
 URL=https://pcsupport.lenovo.com/
