Update recommendations; update StarBook

--- a/Star Labs/StarBook/oem.conf
+++ b/Star Labs/StarBook/oem.conf
@@ -1,6 +1,18 @@
 [OEM]
+# Human-facing OEM name
 Manufacturer=Star Labs
+
+# Device name
 Product=StarBook
+
+# Human-facing model number or version, expected to be slightly de-emphasized
 Version=Mk V
-Logo=/etc/oem/starbook.png
+
+# Path to a logo or hardware image, expected to be shown on a light background
+Logo=/etc/oem/star-labs.png
+
+# Optional version of the above image expected to be shown on a dark background
+# LogoDark=/etc/oem/logo-dark.png
+
+# OEM URL, e.g. for information and/or end user support
 URL=https://support.starlabs.systems/
